# hpc-gl

./: CMakeLists.txt  README.md
src/: triangle.cpp
